--- a/onlineshoppingapp/pom.xml
+++ b/onlineshoppingapp/pom.xml
@@ -15,6 +15,12 @@
 
 
 	<dependencies>
+		<!-- Linked backend project -->
+		<dependency>
+			<groupId>com.oul</groupId>
+			<artifactId>shoppingbackend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax</groupId>
